[build-system]
requires = ["pbr>=6.1.1"]
build-backend = "pbr.build"

[project]
name = "trove_tempest_plugin"
description = "Tempest plugin for Trove"
authors = [
    {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "Apache-2.0"
dynamic = ["version", "dependencies"]
requires-python = ">=3.11"
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://opendev.org/openstack/trove-tempest-plugin"

[tool.setuptools]
packages = [
    "trove_tempest_plugin"
]

[project.entry-points."tempest.test_plugins"]
trove_tests = "trove_tempest_plugin.plugin:TroveTempestPlugin"
