[metadata]
name = trove_tempest_plugin
summary = Tempest plugin for Trove project
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/trove/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    trove_tempest_plugin

[entry_points]
tempest.test_plugins =
    trove_tests = trove_tempest_plugin.plugin:TroveTempestPlugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = trove_tempest_plugin/locale
domain = trove_tempest_plugin

[update_catalog]
domain = trove_tempest_plugin
output_dir = trove_tempest_plugin/locale
input_file = trove_tempest_plugin/locale/trove_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = trove_tempest_plugin/locale/trove_tempest_plugin.pot
