[metadata]
name = trove_tempest_plugin
summary = Tempest plugin for Trove project
description_file =
    README.rst
license = Apache-2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://docs.openstack.org/trove/latest/
python_requires = >= 3.10
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[files]
packages =
    trove_tempest_plugin

[entry_points]
tempest.test_plugins =
    trove_tests = trove_tempest_plugin.plugin:TroveTempestPlugin
